--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@ h2 {
   padding: 10px 0 15px;
   font-size: 2.8em;
   text-align: center;
+  font-weight: 450;
 }
 
 @media (min-width: 650px) {
@@ -26,4 +27,5 @@ h2 {
 p,
 label {
   font-size: 1.2em;
+  font-weight: 350;
 }
